New version 1.3.0, split library package, update files and BuildRequires

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,2 @@
----
 sources:
-  sflphone-kde-1.2.0.tar.bz2: aa87850e559294e459115c6c8d3f68385433840d
+  sflphone-client-kde-1.3.0.tar.xz: 4b8ba1687f243c2bb30ba60a9ee82fa0a8793a2a
